# BinaryPaperComparison

./: README.md  notes.txt
KS/: notes.txt  parsePcap.py  readme.txt
antlr/: .gitignore  DNS.g4  Dockerfile  antlr_time_741bda77.output  antlr_time_d5f17038.output  compile.sh  docker_instructions.txt  notes.txt  readme.txt  script.sh
antlr/binary/: ByteInputStream.cpp  ByteInputStream.h  CMakeLists.txt  README.txt  pmain.cpp
antlr/binary/cmake/: ExternalAntlr4Cpp.cmake
antlr/binary/grammars/: ARP.g4  DNS.g4  DNS_unfactored.g4
construct/: Dockerfile  dns.py  dns_backward.py  dns_forward.py  dns_switch.py  ip_stack_construct.py  ip_stack_construct_without_dns.py  notes.txt  parsePcap.py  readme.txt  requirements.txt  time.output  time_100.output
dns_pcaps/: .gitignore  dns-zone-transfer-ixfr.pcapng  dns_all_rr_types_udp.pcap  readme.txt
formatFuzzer/: .gitignore  Dockerfile  compile.sh  dns.bt  notes.txt  parsePcap.py  pmain.cpp  readme.txt
kaitaiStruct/: .gitignore  DNS.ksy  DnsPacket.java  Dockerfile  LICENSE  Makefile  dns_packet.cpp  dns_packet.h  dns_packet.html  dns_packet.py  dns_packet.rs  readme.txt  requirements.txt  run.sh
kaitaiStruct/cpp_stl_11/: dns_packet.cpp  dns_packet.h
kaitaiStruct/csharp/: DnsPacket.cs
kaitaiStruct/graphviz/: dns_packet.dot
kaitaiStruct/javascript/: DnsPacket.js
scl/: .gitignore  Dockerfile  compile.sh  notes.txt  readme.txt  time.output  time_dns_all_rr_types_udp_times100.output
spicy/: .gitignore  Dockerfile  Makefile  dns-analyzer.spicy  dns.spicy  notes.txt  parsePcap.py  readme.txt  requirements.txt  run.sh
(+12 files in other folders)
